initial changes to personal site

--- a/src/content/about/about.mdx
+++ b/src/content/about/about.mdx
@@ -1,14 +1,12 @@
 ---
-title: "About This Starter"
-image: "./charles-deluvio-DgoyKNgPiFQ-unsplash.jpg"
+title: "About Me"
+image: "./profile.jpg"
 ---
 import Underlining from "../../styles/Underlining";
 import Theme from "../../styles/Theme";
 
-Portfolio Minimal is a Gatsby Starter that creates your one-page portfolio within minutes!
+Software engineer by way of public service, working with the full stack. Yogi. Karaoke & outdoor enthusiast. Entrepreneur.
 
-It has predefined sections for your bio, skills, projects, and contact details. If you are a writer on Medium, you can integrate your latest articles in a distinct section as well. There is a section template included if you want to add more custom sections. 
+Our world must confront the urgency of connecting tech more responsibly to public life. During my decade in government, each passing year brought new unknowns: how we would move and travel; how industries would thrive or choke; how people would define human rights, justice, freedom. While Uber and Lyft drivers fought for the right to collectively bargain, medallion owners took their own lives on the steps of City Hall. When Amazon announced its plan to build a base of operations in Western Queens, I organized PrimedOutNYC, one of a coalition of grassroots groups opposing HQ2 and its impact on local housing, infrastructure, and diversity.
 
-Using Styled Components, the starter has full theming support, making color and font changes easy.
-
-Photo by <a href="https://unsplash.com/@charlesdeluvio?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link"><Underlining color={Theme.colors.tertiary} hoverColor={Theme.colors.secondary}>Charles Deluvio</Underlining></a> on Unsplash
+Emerging technologies offer the chance to rewrite the rulebook - either towards a more equitable world, or one that continues to stack the deck. We must empower an industry that is values-driven, informed and diverse. The powerful play goes on, and you may contribute a verse. What will your verse be?
