--- a/src/content/projects/easy-setup/index.mdx
+++ b/src/content/projects/easy-setup/index.mdx
@@ -1,15 +1,25 @@
 ---
-title: "Add content and deploy!"
-category: "Easy and Quick Setup"
-emoji: "🕹️"
-screenshot: "./clement-h-95YRwf6CNw8-unsplash.jpg"
-github: "https://github.com/konstantinmuenster/gatsby-starter-portfolio-minimal"
-external: "https://unsplash.com/@clemhlrdt?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+title: "AltCart"
+category: "Capstone Project"
+emoji: "🛒"
+screenshot: "./AltCart.png"
+github: "https://github.com/Xcodist/GH2001-capstone"
+external: "https://www.youtube.com/watch?v=EY027zDe00o"
 tags:
-  - Content Integration
-  - Ready-2-Deploy
+  - Node
+  - Express
+  - Sequelize ORM
+  - React
+  - Redux
+  - Cheerio Web Scraper
+  - SerpAPI
+  - NewsAPI
 visible: "true"
 position: 1
 ---
 
-Get up and running within minutes. Just install the starter, add your content, deploy it, and there you go! This starter works seamlessly with hosts like Netlify. Photo by <a href="https://unsplash.com/@clemhlrdt?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link">Clément H</a> on Unsplash.
+Now more than ever, consumers are holding corporations accountable for putting profits over people. However, the convenience of sites like Walmart & Amazon make it easier than ever to shop without much thought. AltCart is a chrome extension that provides users the opportunity to checkout their cart products from alternative, smaller retailers.
++ Built out the app's initial configuration framework, including its chrome manifest, webpack and babel configs, express middleware
++ Developed highly scalable front-end architecture using Redux state management
++ Implemented SerpAPI's remote google search library for fast & up-to-date data rendering to provide alternative retailers to users
++ Integrated Cheerio's web scraping library to capture corporate social responsibility ratings for over 9,000 companies
