--- a/src/content/interests/interests.mdx
+++ b/src/content/interests/interests.mdx
@@ -1,40 +1,56 @@
 ---
-title: "Features"
+title: "Proficiencies"
 ---
 
 export const shownItems = 5
 export const interests = [
   {
-    name: "Quick and Easy Setup",
-    icon: "./icons/joystick.png",
+    name: "Javascript",
+    icon: "./icons/javascript.png",
   },
   {
-    name: "Content via Markdown",
-    icon: "./icons/notebook.png",
+    name: "NodeJS",
+    icon: "./icons/node.png",
   },
   {
-    name: "Responsive Design",
-    icon: "./icons/nail-polish.png",
+    name: "Express",
+    icon: "./icons/express.png",
   },
   {
-    name: "Medium Integration",
-    icon: "./icons/medium.png",
+    name: "Postgres",
+    icon: "./icons/pg.png",
   },
   {
-    name: "Animations",
-    icon: "./icons/gem-stone.png",
+    name: "Sequelize",
+    icon: "./icons/sequelize2.png",
   },
   {
-    name: "PWA (Offline Support)",
-    icon: "./icons/mobile-phone.png",
+    name: "Axios",
+    icon: "./icons/axios.png",
   },
   {
-    name: "Modern Tech-Stack",
+    name: "React",
+    icon: "./icons/react.png",
+  },
+  {
+    name: "Redux",
+    icon: "./icons/redux.png",
+  },
+  {
+      name: "MaterialUI",
+      icon: "./icons/material-ui.png",
+    },
+    {
+    name: "Webpack",
+    icon: "./icons/webpack.png",
+    },
+    {
+    name: "Gatsby",
     icon: "./icons/gatsby.png",
   },
-  {
-    name: "Blazing Fast",
-    icon: "./icons/high-voltage.png",
+      {
+    name: "Git & GitHub",
+    icon: "./icons/git.png",
   },
 ]
 
