--- a/src/content/hero/hero.mdx
+++ b/src/content/hero/hero.mdx
@@ -1,9 +1,9 @@
 ---
 greetings: "Hello"
 icon: "waving-hand.png"
-title: "I'm a Gatsby Starter"
-subtitlePrefix: "I create awesome "
-subtitle: "one-page portfolios"
+title: "I'm Stacey"
+subtitlePrefix: "& I'm a "
+subtitle: "fullstack software engineer."
 ---
 
-A modern portfolio with a minimalistic design.
+Check out my work!
