--- a/src/content/projects/altCart/index.mdx
+++ b/src/content/projects/altCart/index.mdx
@@ -2,13 +2,13 @@
 title: "AltCart"
 category: "Capstone Project"
 emoji: "🛒"
-screenshot: "./AltCart.png"
+screenshot: "./altCart.png"
 github: "https://github.com/Xcodist/GH2001-capstone"
 external: "https://www.youtube.com/watch?v=EY027zDe00o"
 tags:
   - Node
   - Express
-  - Sequelize ORM
+  - Sequelize
   - React
   - Redux
   - Cheerio Web Scraper
