--- a/src/content/projects/famex/index.mdx
+++ b/src/content/projects/famex/index.mdx
@@ -2,7 +2,7 @@
 title: "FameX"
 category: "E-Commerce Site"
 emoji: "🛒"
-screenshot: "./famex.png"
+screenshot: "./famex1.png"
 github: "https://github.com/Kill-9-Mockingbird/grace-shopper"
 external: "https://famex.herokuapp.com/"
 tags:
