--- a/src/content/projects/altCart/index.mdx
+++ b/src/content/projects/altCart/index.mdx
@@ -2,7 +2,7 @@
 title: "AltCart"
 category: "Capstone Project"
 emoji: "🛒"
-screenshot: "./altCart.png"
+screenshot: "./AltCart.png"
 github: "https://github.com/Xcodist/GH2001-capstone"
 external: "https://www.youtube.com/watch?v=EY027zDe00o"
 tags:
