spacing on header

--- a/src/content/hero/hero.mdx
+++ b/src/content/hero/hero.mdx
@@ -1,6 +1,6 @@
 ---
-greetings: "Hello"
-icon: "waving-hand.png"
+greetings: "Hello!"
+icon: "rebels.png"
 title: "I'm Stacey"
 subtitlePrefix: "& I'm a "
 subtitle: "fullstack software engineer."
