--- a/src/content/proficiencies/proficiencies.mdx
+++ b/src/content/proficiencies/proficiencies.mdx
@@ -3,7 +3,7 @@ title: "Proficiencies"
 ---
 
 export const shownItems = 5
-export const interests = [
+export const proficiencies = [
   {
     name: "Javascript",
     icon: "./icons/javascript.png",
@@ -52,6 +52,4 @@ export const interests = [
     name: "Git & GitHub",
     icon: "./icons/git.png",
   },
-]
-
-;
+];
