--- a/src/content/projects/altCart/index.mdx
+++ b/src/content/projects/altCart/index.mdx
@@ -18,8 +18,8 @@ visible: "true"
 position: 1
 ---
 
-Now more than ever, consumers are holding corporations accountable for putting profits over people. However, the convenience of sites like Walmart & Amazon make it easier than ever to shop without much thought. AltCart is a chrome extension that provides users the opportunity to checkout their cart products from alternative, smaller retailers.
-+ Built out the app's initial configuration framework, including its chrome manifest, webpack and babel configs, express middleware
-+ Developed highly scalable front-end architecture using Redux state management
-+ Implemented SerpAPI's remote google search library for fast & up-to-date data rendering to provide alternative retailers to users
-+ Integrated Cheerio's web scraping library to capture corporate social responsibility ratings for over 9,000 companies
+The convenience of retail giants makes it easier than ever to shop without much thought. AltCart is a chrome extension that provides users the opportunity to checkout their Amazon and Walmart cart products from alternative, smaller retailers.
++ Built out the app's initial configuration framework, including chrome manifest, webpack & babel configs, express middleware
++ Developed highly scalable architecture using Redux state management
++ Implemented SerpAPI's remote google search library to render fast & up-to-date alternative retailer data
++ Integrated Cheerio's web scraping library to capture social responsibility ratings for over 9,000 companies
