hero page edits

--- a/src/content/hero/hero.mdx
+++ b/src/content/hero/hero.mdx
@@ -6,4 +6,9 @@ subtitlePrefix: "& I'm a "
 subtitle: "fullstack software engineer."
 ---
 
-Welcome!
+```
+"And these children that you spit on
+As they try to change their worlds
+Are immune to your consultations
+They're quite aware of what they're going through"
+```
