--- a/src/content/about/about.mdx
+++ b/src/content/about/about.mdx
@@ -7,4 +7,4 @@ import Theme from "../../styles/Theme";
 
 Software engineer by way of public service, working with the full stack. Yogi. Karaoke & outdoor enthusiast. Entrepreneur.
 
-Our world must confront the urgency of connecting tech more responsibly to public life. During my decade in government, each passing year brought new unknowns: how we would move and travel; how industries would thrive or choke; how people would define human rights, justice, freedom. Emerging technologies offer the chance to rewrite the rulebook - either towards a more equitable world, or one that continues to stack the deck. We must empower an industry that is values-driven, informed and diverse. The powerful play goes on, and you may contribute a verse. What will your verse be?
+Motivated to connect tech more responsibly to public life. During my decade in government, each passing year brought new unknowns: how we would move and travel; how industries would thrive or choke; how people would define human rights, justice, freedom. Emerging technologies offer the chance to rewrite the rulebook - either towards a more equitable world, or one that continues to stack the deck. We must empower an industry that is values-driven, informed and diverse. The powerful play goes on, and you may contribute a verse. What will your verse be?
