styling changes and bowie image

--- a/src/content/hero/hero.mdx
+++ b/src/content/hero/hero.mdx
@@ -1,14 +1,15 @@
 ---
 greetings: "Hello!"
-icon: "rebels.png"
+icon: "./rebels.png"
 title: "I'm Stacey"
 subtitlePrefix: "& I'm a "
 subtitle: "fullstack software engineer."
 ---
 
 ```
-"And these children that you spit on
+And these children that you spit on
 As they try to change their worlds
 Are immune to your consultations
-They're quite aware of what they're going through"
+They're quite aware of what they're going through 
+... ch-ch-ch-ch-changes!
 ```
