--- a/src/content/proficiencies/proficiencies.mdx
+++ b/src/content/proficiencies/proficiencies.mdx
@@ -5,7 +5,7 @@ title: "Proficiencies"
 export const shownItems = 12
 export const proficiencies = [
   {
-    name: "Javascript",
+    name: "JavaScript",
     icon: "./icons/javascript.png",
   },
   {
