--- a/src/content/projects/WOTM/index.mdx
+++ b/src/content/projects/WOTM/index.mdx
@@ -1,10 +1,10 @@
 ---
 title: "Woodside on the Move"
-category: "Community"
+category: "Community Web App"
 emoji: "💪"
 screenshot: "./WOTM.png"
 github: "https://github.com/woodsideonthemove/wotm-website"
-external: "https://unsplash.com/@kellysikkema"
+external: "http://www.woodsideonthemove.org"
 tags:
   - Gatsby
   - React
