--- a/src/content/projects/altCart/index.mdx
+++ b/src/content/projects/altCart/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "AltCart"
-category: "Capstone Project"
+category: "Google Chrome Extension"
 emoji: "🛒"
 screenshot: "./AltCart.png"
 github: "https://github.com/Xcodist/GH2001-capstone"
