spacing on social media buttons, addl proficiencies

--- a/src/content/proficiencies/proficiencies.mdx
+++ b/src/content/proficiencies/proficiencies.mdx
@@ -1,5 +1,6 @@
 ---
-title: "Proficiencies"
+title: "Proficient"
+subtitle: "Knowledgable"
 ---
 
 export const shownItems = 12
@@ -51,5 +52,52 @@ export const proficiencies = [
       {
     name: "Git & GitHub",
     icon: "./icons/git.png",
+  },
+];
+
+export const knowledgable = [
+  {
+    name: "SQL",
+    icon: "./icons/sql.png",
+  },
+  {
+    name: "MongoDB",
+    icon: "./icons/mongodb.png",
+  },
+  {
+    name: "GraphQL",
+    icon: "./icons/graphql.png",
+  },
+  {
+    name: "Cheerio",
+    icon: "./icons/cheerio.png",
+  },
+  {
+    name: "Chrome Extensions",
+    icon: "./icons/chrome.png",
+  },
+    {
+    name: "Babel",
+    icon: "./icons/babel.jpg",
+  },
+    {
+    name: "Jasmine",
+    icon: "./icons/Logo_jasmine.png",
+  },
+    {
+    name: "Mocha",
+    icon: "./icons/mocha.png",
+  },
+  {
+      name: "Chai",
+      icon: "./icons/chai.png",
+    },
+    {
+    name: "Heroku",
+    icon: "./icons/heroku.png",
+    },
+    {
+    name: "Netlify",
+    icon: "./icons/netlify.png",
   },
 ];
