added elevated infusions, tweaked loading effect for proficiencies

--- a/src/content/projects/WOTM/index.mdx
+++ b/src/content/projects/WOTM/index.mdx
@@ -14,10 +14,11 @@ tags:
   - Material UI
   - Netlify
 visible: "true"
-position: 3
+position: 4
 ---
 
 A web app engaging residents with community actions, events & news.
-+ Spearheaded backend migration from former Wordpress site using Gatsby.js 
-+ Deployed highly-scalable frontend architecture using Redux pattern, normalized application state, and modular React components
-+ Implemented a responsive and intuitive user experience using Material UI
+
+- Spearheaded backend migration from former Wordpress site using Gatsby.js
+- Deployed highly-scalable frontend architecture using Redux pattern, normalized application state, and modular React components
+- Implemented a responsive and intuitive user experience using Material UI
