--- a/src/content/projects/altCart/index.mdx
+++ b/src/content/projects/altCart/index.mdx
@@ -15,11 +15,12 @@ tags:
   - SerpAPI
   - NewsAPI
 visible: "true"
-position: 1
+position: 2
 ---
 
 The convenience of retail giants makes it easier than ever to shop without much thought. AltCart is a chrome extension that provides users the opportunity to checkout their Amazon and Walmart cart products from alternative, smaller retailers.
-+ Built out the app's initial configuration framework, including chrome manifest, webpack & babel configs, express middleware
-+ Developed highly scalable architecture using Redux state management
-+ Implemented SerpAPI's remote google search library to render fast & up-to-date alternative retailer data
-+ Integrated Cheerio's web scraping library to capture social responsibility ratings for over 9,000 companies
+
+- Built out the app's initial configuration framework, including chrome manifest, webpack & babel configs, express middleware
+- Developed highly scalable architecture using Redux state management
+- Implemented SerpAPI's remote google search library to render fast & up-to-date alternative retailer data
+- Integrated Cheerio's web scraping library to capture social responsibility ratings for over 9,000 companies
