--- a/src/content/projects/famex/index.mdx
+++ b/src/content/projects/famex/index.mdx
@@ -15,10 +15,11 @@ tags:
   - Passport
   - MaterialUI
 visible: "true"
-position: 2
+position: 3
 ---
 
 A RESTful e-commerce web app selling outrageous celebrity experiences.
-+ Designed database schemas and built out backend routing, including routing permissions for guests, users and administrators
-+ Contributed to cart functionality and implemented checkout feature to ensure consistent data flow from cart to purchase completion 
-+ Created admin dashboard for editing, adding and deleting users & experiences
+
+- Designed database schemas and built out backend routing, including routing permissions for guests, users and administrators
+- Contributed to cart functionality and implemented checkout feature to ensure consistent data flow from cart to purchase completion
+- Created admin dashboard for editing, adding and deleting users & experiences
