--- a/src/content/contact/contact.mdx
+++ b/src/content/contact/contact.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Want to collaborate?"
 name: "Stacey Eliuk"
-email: "seliukfsa@gmail.com"
+email: "stacey.eliuk@gmail.com"
 profileImage: "./profile.jpg"
 ---
