fixed typo and deleted unused variable

--- a/src/content/proficiencies/proficiencies.mdx
+++ b/src/content/proficiencies/proficiencies.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Proficient"
-subtitle: "Knowledgable"
+subtitle: "Knowledgeable"
 ---
 
 export const shownItems = 12
@@ -25,35 +25,35 @@ export const proficiencies = [
     name: "Redux",
     icon: "./icons/redux.png",
   },
-    {
+  {
     name: "NodeJS",
     icon: "./icons/node.png",
   },
-    {
+  {
     name: "Postgres",
     icon: "./icons/pg.png",
   },
-    {
+  {
     name: "Axios",
     icon: "./icons/axios.png",
   },
   {
-      name: "MaterialUI",
-      icon: "./icons/material-ui.png",
-    },
-    {
+    name: "MaterialUI",
+    icon: "./icons/material-ui.png",
+  },
+  {
     name: "Webpack",
     icon: "./icons/webpack.png",
-    },
-    {
+  },
+  {
     name: "Gatsby",
     icon: "./icons/gatsby.png",
   },
-      {
+  {
     name: "Git & GitHub",
     icon: "./icons/git.png",
   },
-];
+]
 
 export const knowledgable = [
   {
@@ -76,28 +76,30 @@ export const knowledgable = [
     name: "Chrome Extensions",
     icon: "./icons/chrome.png",
   },
-    {
+  {
     name: "Babel",
     icon: "./icons/babel.jpg",
   },
-    {
+  {
     name: "Jasmine",
     icon: "./icons/Logo_jasmine.png",
   },
-    {
+  {
     name: "Mocha",
     icon: "./icons/mocha.png",
   },
   {
-      name: "Chai",
-      icon: "./icons/chai.png",
-    },
-    {
+    name: "Chai",
+    icon: "./icons/chai.png",
+  },
+  {
     name: "Heroku",
     icon: "./icons/heroku.png",
-    },
-    {
+  },
+  {
     name: "Netlify",
     icon: "./icons/netlify.png",
   },
-];
+]
+
+;
